--- a/example/index.html
+++ b/example/index.html
@@ -4,8 +4,8 @@
 <title>SlideIt project</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1" />
-<link rel="stylesheet" href="src/styles.css" />
-<script src="src/main.js" type="module"></script>
+<link rel="stylesheet" href="./styles.css" />
+<script src="./main.js" type="module"></script>
 </head>
 <body>
 <div id="container">
